CHANGES IN FLTK 1.1.5rc1

	- Fl::background2() incorrectly marked the foreground
	  color as initialized (STR #255)
	- Fixed the X11 CTRL + "-" detection code to properly
	  track the state of the CTRL key (STR #264)
	- Fl_File_Icon::load_system_icons() didn't support KDE
	  3.x (STR #299)
	- WIN32's scandir() emulation did not allocate enough
	  memory for directory names (STR #263)
	- Fl::compose() did not handle special keys like
	  backspace properly (STR #293)
	- Fl_Choice did not clip its text when drawing using the
	  plastic scheme (STR #287)
	- Fl_Group incorrectly mapped the emacs CTRL keys to
	  keyboard navigation (STR #228)
	- Fl_File_Browser::load() didn't handle a NULL directory
	  name (STR #266)
	- 64-bit library fixes (STR #261, )
	- The Fl_Valuator::format() function did not limit the
	  size of the number buffer (STR #268)
	- The keypad Enter key works as the normal Enter/Return
	  key in common widgets (STR #191)
	- Doco fixes (STR #186)
	- Fixed some OS/2-specific build problems (STR #185 and
	  #197)
	- Calling Fl_Text_Display::buffer() with the same buffer
	  would cause an application to lockup (STR #196)
	- Some of the widgets could crash an application if the
	  cursor was changed after a window was deleted (STR
	  #181)
	- The Fl_Gl_Window WIN32 pixel format code did not
	  choose the pixel format with the largest depth buffer
	  (STR #175)
	- The configure script didn't leave space between the
	  CFLAGS/CXXFLAGS and X_CFLAGS variables (STR #174)
	- The Fl_JPEG_Image and Fl_PNG_Image classes did not
	  trap errors from the corresponding image libraries
	  (STR #168)
	- Added "--with-links" configure option to control
	  whether symlinks are created for the FLTK header files
	  (STR #164)
	- Added new hoverdelay() to Fl_Tooltip to control how
	  quickly recent tooltips appear (STR #126)
	- FLUID now sets the size range when a window is shown.
	  This seems to be necessary with some window managers
	  (STR #166)


CHANGES IN FLTK 1.1.4
